# auro-nav

./: .gitignore  AGENTS.md  HARDWARE_MAP.md  MEMORY.md  README.md
docs/: GATE_LOG.md
firmware_sdk/: CMakeLists.txt
firmware_sdk/src/: main.c  quadrature_sample.pio
prompts/: claude_cli_nav2_test_prompt.md  claude_code_execute_gates.md  claude_code_scaffold.md
protocol/: ndjson_v1.md  ndjson_v1.schema.json
ros2_ws/src/auro_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src/auro_nav/auro_nav/: auro_bridge_node.py  web_teleop_node.py
ros2_ws/src/auro_nav/config/: nav2_params.yaml  slam_params.yaml
ros2_ws/src/auro_nav/launch/: auro_nav2_launch.py  mobile_slam_launch.py
ros2_ws/src/auro_nav/maps/: arena_v1.yaml
ros2_ws/src/auro_nav/udev/: 99-auro.rules  99-rplidar.rules
